--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "vue-virtual-scroller": "^2.0.0-alpha.1",
     "@apollo/client": "3.3.20",
     "@perspect3vism/ad4m": "^0.1.16",
     "@tiptap/core": "^2.0.0-beta.66",
