--- a/packages/chat-view/package.json
+++ b/packages/chat-view/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "chat-view",
+  "name": "junto-plugin-chat-view",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
