add custom build for docs

--- a/packages/chat-view/package.json
+++ b/packages/chat-view/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build-docs": "vite build --config vite.config.docs.ts",
     "serve": "vite preview"
   },
   "dependencies": {
