--- a/packages/chat-view/package.json
+++ b/packages/chat-view/package.json
@@ -1,6 +1,11 @@
 {
   "name": "junto-plugin-chat-view",
   "version": "0.0.0",
+  "main": "dist/my-lib.umd.js",
+  "module": "dist/my-lib.es.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
