--- a/packages/chat-view/package.json
+++ b/packages/chat-view/package.json
@@ -10,10 +10,10 @@
     "dev": "vite",
     "build": "vite build",
     "build-docs": "vite build --config vite.config.docs.ts",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "publish": "np"
   },
   "dependencies": {
-    "vue-virtual-scroller": "^2.0.0-alpha.1",
     "@apollo/client": "3.3.20",
     "@perspect3vism/ad4m": "^0.1.16",
     "@tiptap/core": "^2.0.0-beta.66",
@@ -42,11 +42,13 @@
     "subscriptions-transport-ws": "^0.9.19",
     "tippy.js": "^6.3.1",
     "vue": "^3.2.12",
+    "vue-virtual-scroller": "^2.0.0-alpha.1",
     "vue3-discordpicker": "^1.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.6",
+    "np": "^7.5.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
     "vue-tsc": "^0.2.2"
