--- a/packages/chat-view/package.json
+++ b/packages/chat-view/package.json
@@ -11,7 +11,7 @@
     "build": "vite build",
     "build-docs": "vite build --config vite.config.docs.ts",
     "serve": "vite preview",
-    "publish": "np"
+    "publish": "np --no-test"
   },
   "dependencies": {
     "@apollo/client": "3.3.20",
