--- a/packages/chat-view/package.json
+++ b/packages/chat-view/package.json
@@ -1,12 +1,19 @@
 {
   "name": "junto-plugin-chat-view",
-  "version": "0.0.1",
-  "main": "dist/my-lib.umd.js",
-  "module": "dist/my-lib.es.js",
+  "version": "0.0.2",
+  "main": "./dist/chat-view.umd.js",
+  "module": "./dist/chat-view.es.js",
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/chat-view.es.js",
+      "require": "./dist/chat-view.umd.js"
+    }
+  },
   "scripts": {
+    "prepare": "vite build",
     "dev": "vite",
     "build": "vite build",
     "build-docs": "vite build --config vite.config.docs.ts",
