--- a/packages/chat-view/package.json
+++ b/packages/chat-view/package.json
@@ -21,6 +21,7 @@
     "release": "np --no-tests"
   },
   "dependencies": {
+    "junto-utils": "file:../junto-utils",
     "@apollo/client": "3.3.20",
     "@perspect3vism/ad4m": "^0.1.16",
     "@tiptap/core": "^2.0.0-beta.66",
