--- a/packages/mini-chat-view/package.json
+++ b/packages/mini-chat-view/package.json
@@ -14,10 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "3.3.20",
-    "@perspect3vism/ad4m": "^0.1.16",
+    "junto-utils": "file:../junto-utils",
     "preact": "^10.5.14",
     "react-tiny-virtual-list": "^2.2.0",
+    "react-window": "^1.8.6",
     "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
