--- a/packages/junto-utils/package.json
+++ b/packages/junto-utils/package.json
@@ -15,6 +15,7 @@
     "subscriptions-transport-ws": "^0.9.19"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "vue": "^3.2.12"
   }
 }
