--- a/packages/mini-chat-view/package.json
+++ b/packages/mini-chat-view/package.json
@@ -14,10 +14,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@tiptap/core": "^2.0.0-beta.66",
+    "@tiptap/extension-bold": "^2.0.0-beta.13",
+    "@tiptap/extension-bullet-list": "^2.0.0-beta.14",
+    "@tiptap/extension-code-block": "^2.0.0-beta.15",
+    "@tiptap/extension-document": "^2.0.0-beta.12",
+    "@tiptap/extension-hard-break": "^2.0.0-beta.14",
+    "@tiptap/extension-history": "^2.0.0-beta.13",
+    "@tiptap/extension-italic": "^2.0.0-beta.14",
+    "@tiptap/extension-link": "^2.0.0-beta.18",
+    "@tiptap/extension-list-item": "^2.0.0-beta.13",
+    "@tiptap/extension-mention": "^2.0.0-beta.72",
+    "@tiptap/extension-ordered-list": "^2.0.0-beta.14",
+    "@tiptap/extension-paragraph": "^2.0.0-beta.14",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.19",
+    "@tiptap/extension-strike": "^2.0.0-beta.16",
+    "@tiptap/extension-text": "^2.0.0-beta.12",
+    "@tiptap/react": "^2.0.0-beta.38",
+    "date-fns": "^2.24.0",
+    "emoji-picker-element": "^1.8.2",
     "junto-utils": "file:../junto-utils",
+    "node-emoji": "^1.11.0",
     "preact": "^10.5.14",
-    "react-window": "^1.8.6",
-    "subscriptions-transport-ws": "^0.9.19"
+    "react-virtuoso": "^2.2.1",
+    "styled-components": "^5.3.1",
+    "tippy.js": "^6.3.1"
   },
   "devDependencies": {
     "esbuild": "^0.13.1",
