--- a/packages/audio-video-view/package.json
+++ b/packages/audio-video-view/package.json
@@ -21,6 +21,10 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "3.3.20",
+    "@junto-foundation/junto-elements": "^0.4.0",
+    "@perspect3vism/ad4m": "^0.1.16",
+    "junto-utils": "file:../junto-utils",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1"
