--- a/packages/audio-video-view/tsconfig.json
+++ b/packages/audio-video-view/tsconfig.json
@@ -54,7 +54,8 @@
         // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
 
         /* Advanced Options */
-        "skipLibCheck": true                      /* Skip type checking of declaration files. */
+        "skipLibCheck": true,                      /* Skip type checking of declaration files. */
+        "useUnknownInCatchVariables": false
     },
     "include": ["src/**/*", "tests/**/*"]
 }
