--- a/packages/junto-utils/package.json
+++ b/packages/junto-utils/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/client": "3.3.20",
     "@perspect3vism/ad4m": "^0.1.16",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
     "subscriptions-transport-ws": "^0.9.19"
   },
   "peerDependencies": {
