feat(app) - Added fullscreen toggle functionality

--- a/packages/audio-video-view/package.json
+++ b/packages/audio-video-view/package.json
@@ -28,6 +28,7 @@
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1",
+    "screenfull": "^5.1.0",
     "styled-components": "^5.3.1",
     "subscriptions-transport-ws": "^0.9.19"
   },
