--- a/packages/mini-chat-view/package.json
+++ b/packages/mini-chat-view/package.json
@@ -55,6 +55,9 @@
   "devDependencies": {
     "esbuild": "^0.13.1",
     "np": "^7.5.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.5",
+    "postcss-modules": "^4.3.0",
+    "esbuild-sass-plugin": "^2.0.0"
   }
 }
