--- a/packages/mini-chat-view/package.json
+++ b/packages/mini-chat-view/package.json
@@ -48,15 +48,16 @@
     "junto-utils": "file:../junto-utils",
     "node-emoji": "^1.11.0",
     "preact": "^10.5.14",
+    "react-hint": "^3.2.1",
     "react-virtuoso": "^2.4.0",
     "tippy.js": "^6.3.1"
   },
   "devDependencies": {
     "esbuild": "^0.13.1",
+    "esbuild-sass-plugin": "^2.0.0",
     "np": "^7.5.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
-    "postcss-modules": "^4.3.0",
-    "esbuild-sass-plugin": "^2.0.0"
+    "postcss-modules": "^4.3.0"
   }
 }
