--- a/packages/mini-chat-view/package.json
+++ b/packages/mini-chat-view/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "junto-plugin-chat-view-simple",
-  "version": "0.0.1",
+  "name": "@junto-foundation/chat-view",
+  "version": "0.0.0",
   "description": "",
   "main": "./dist/main.js",
   "module": "./dist/main.js",
