--- a/packages/junto-utils/package.json
+++ b/packages/junto-utils/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/client": "3.4.17",
     "@perspect3vism/ad4m": "^0.1.24",
+    "dexie": "^3.2.0",
+    "dexie-react-hooks": "^1.1.1",
     "subscriptions-transport-ws": "^0.9.19"
   },
   "peerDependencies": {
