fix bug where messages would not load, if one expression returned null and failed silently causing further expressions not be fetched.

--- a/packages/mini-chat-view/tsconfig.json
+++ b/packages/mini-chat-view/tsconfig.json
@@ -3,5 +3,14 @@
     "jsx": "preserve",
     "jsxFactory": "h",
     "jsxFragmentFactory": "Fragment"
-  }
+  },
+  "include": [
+    "**/*",
+    "../junto-utils/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "../junto-utils/node_modules",
+    "**/*.spec.ts"
+  ]
 }
