--- a/packages/junto-utils/package.json
+++ b/packages/junto-utils/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "3.4.17",
-    "@perspect3vism/ad4m": "^0.1.24",
+    "@perspect3vism/ad4m": "0.1.30",
     "date-fns": "^2.28.0",
     "dexie": "^3.2.0",
     "dexie-react-hooks": "^1.1.1",
