--- a/packages/junto-utils/package.json
+++ b/packages/junto-utils/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "3.4.17",
-    "@perspect3vism/ad4m": "0.1.30",
+    "@apollo/client": "^3.6.9",
+    "@perspect3vism/ad4m": "^0.1.34",
     "date-fns": "^2.28.0",
     "dexie": "^3.2.0",
     "dexie-react-hooks": "^1.1.1",
+    "graphql-ws": "^5.9.1",
     "subscriptions-transport-ws": "^0.9.19"
   },
   "peerDependencies": {
