--- a/packages/mini-chat-view/tsconfig.json
+++ b/packages/mini-chat-view/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "jsx": "preserve",
     "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment"
+    "jsxFragmentFactory": "Fragment",
+    "downlevelIteration": true
   },
   "include": [
     "**/*",
